--- a/index.html
+++ b/index.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Astrid Bakken JS challenge</title>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@400;700&family=Inconsolata&family=Source+Sans+Pro:wght@200;300&display=swap" rel="stylesheet">
+  </head>
+  <body>
     <h1>30 days JS challenge</h1>
-    <h4>Challenge by <a href="https://github.com/Asabeneh/30-Days-Of-JavaScript" target="_blank">Asabeneh</a></h4>
+    <h4>
+      Challenge by
+      <a
+        href="https://github.com/Asabeneh/30-Days-Of-JavaScript"
+        target="_blank"
+        >Asabeneh</a
+      >
+    </h4>
     <div>
-        <ul>
-            <li>
-                <a href="day1.html" class="">Day 1</a>
-            </li>
-            <li>
-                <a href="day2.html" class="">Day 2</a>
-            </li>
-        </ul>
+      <ul>
+        <li>
+          <a href="day1.html" class="">Day 1</a>
+        </li>
+        <li>
+          <a href="day2.html" class="">Day 2</a>
+        </li>
+        <li>
+          <a href="day3.html" class="">Day 3</a>
+        </li>
+      </ul>
     </div>
-</body>
+  </body>
 </html>
