--- a/day2.html
+++ b/day2.html
@@ -94,7 +94,45 @@
     <h3>Exercise: Level 2</h3>
     <ol type="1">
         <li>
-            
+            Using console.log() print out the following statement: The quote 'There is no exercise better for the heart than reaching down and lifting people up.' by John Holmes teaches us to help one another.
+        </li>
+        <li>
+            Using console.log() print out the following quote by Mother Teresa: "Love is not patronizing and charity isn't about pity, it is about love. Charity and love are the same -- with charity you give love, so don't just give money but reach out your hand instead."
+        </li>
+        <li>
+            Check if typeof '10' is exactly equal to 10. If not make it exactly equal.
+        </li>
+        <li>
+            Check if parseFloat('9.8') is equal to 10 if not make it exactly equal with 10.
+        </li>
+        <li>
+            Check if 'on' is found in both python and jargon
+        </li>
+        <li>
+            I hope this course is not full of jargon. Check if jargon is in the sentence.
+        </li>
+        <li>
+            Generate a random number between 0 and 100 inclusively.
+        </li>
+        <li>
+            Generate a random number between 50 and 100 inclusively.
+        </li>
+        <li>
+            Generate a random number between 0 and 255 inclusively.
+        </li>
+        <li>
+            Access the 'JavaScript' string characters using a random number.
+        </li>
+        <li>
+            Use console.log() and escape characters to print the following pattern. <br>
+            1 1 1 1 1<br>
+            2 1 2 4 8<br>
+            3 1 3 9 27<br>
+            4 1 4 16 64<br>
+            5 1 5 25 125<br>
+        </li>
+        <li>
+            Use substr to slice out the phrase because because because from the following sentence:'You cannot end a sentence with because because because is a conjunction'
         </li>
     </ol>
     
