Day2/ level 3 + color for letters

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@400;700&family=Inconsolata&family=Source+Sans+Pro:wght@200;300&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body class="myDesign">
     <h1>30 days JS challenge</h1>
     <h4>
       Challenge by
