Challenge day 3 level 1 + simple header

--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Astrid Bakken JS challenge</title>
     <link rel="stylesheet" href="style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@400;700&family=Inconsolata&family=Source+Sans+Pro:wght@200;300&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@400;700&family=Inconsolata&family=Source+Sans+Pro:wght@200;300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body class="myDesign">
+    <div class="header">
+      <a class="active" href="index.html">Home</a>
+      <!-- <a href="#contact">Contact</a> -->
+      <a href="https://ahbakken.github.io" target="_blank">About</a>
+    </div>
     <h1>30 days JS challenge</h1>
     <h4>
       Challenge by
