day 3 level 2, assignments + calculations start

--- a/day3.html
+++ b/day3.html
@@ -81,5 +81,108 @@
         <p id="result7"></p>
       </li>
     </ol>
+    <h3>Exercise: Level 2</h3>
+    <ol type="1">
+      <li>
+        Write a script that prompt the user to enter base and height of the
+        triangle and calculate an area of a triangle (area = 0.5 x b x h).<br />
+        Enter base: 20 
+        Enter height: 10 <br />
+        The area of the triangle is 100
+        <div>
+          <h4>Calculate a triangle area</h4>
+          <label for="length"> Length </label>
+          <input type="number" id="calclenght" name="lenght"/><br />
+          <label for="height"> Height </label>
+          <input type="number" id="calcheight" name="height" /><br />
+          <button name="calculate" id="calc-button">Calculate</button>
+          <p id="result8"></p>
+        </div>
+      </li>
+      <li>
+        Write a script that prompt the user to enter side a, side b, and side c
+        of the triangle and and calculate the perimeter of triangle (perimeter =
+        a + b + c)<br />
+
+        Enter side a: 5<br />
+        Enter side b: 4<br />
+        Enter side c: 3<br />
+        The perimeter of the triangle is 12<br />
+      </li>
+      <li>
+        Get length and width using prompt and calculate an area of rectangle
+        (area = length x width and the perimeter of rectangle (perimeter = 2 x
+        (length + width))
+      </li>
+      <li>
+        Get radius using prompt and calculate the area of a circle (area = pi x
+        r x r) and circumference of a circle(c = 2 x pi x r) where pi = 3.14.
+      </li>
+      <li>Calculate the slope, x-intercept and y-intercept of y = 2x -2</li>
+      <li>
+        Slope is m = (y2-y1)/(x2-x1). Find the slope between point (2, 2) and
+        point(6,10)
+      </li>
+      <li>Compare the slope of above two questions.</li>
+      <li>
+        Calculate the value of y (y = x2 + 6x + 9). Try to use different x
+        values and figure out at what x value y is 0.
+      </li>
+      <li>
+        Writ a script that prompt a user to enter hours and rate per hour.
+        Calculate pay of the person?<br />
+
+        Enter hours: 40<br />
+        Enter rate per hour: 28<br />
+        Your weekly earning is 1120<br />
+      </li>
+      <li>
+        If the length of your name is greater than 7 say, your name is long else
+        say your name is short.
+      </li>
+      <li>
+        Compare your first name length and your family name length and you
+        should get this output.<br />
+
+        let firstName = 'Asabeneh'<br />
+        let lastName = 'Yetayeh'<br />
+
+        Your first name, Asabeneh is longer than your family name, Yetayeh<br />
+      </li>
+      <li>
+        Declare two variables myAge and yourAge and assign them initial values
+        and myAge and yourAge.<br />
+
+        let myAge = 250<br />
+        let yourAge = 25<br />
+        I am 225 years older than you.<br />
+      </li>
+      <li>
+        Using prompt get the year the user was born and if the user is 18 or
+        above allow the user to drive if not tell the user to wait a certain
+        amount of years.<br />
+
+        Enter birth year: 1995<br />
+        You are 25. You are old enough to drive<br />
+
+        Enter birth year: 2005<br />
+        You are 15. You will be allowed to drive after 3 years.<br />
+      </li>
+      <li>
+        Write a script that prompt the user to enter number of years. Calculate
+        the number of seconds a person can live. Assume some one lives just
+        hundred years<br />
+
+        Enter number of years you live: 100<br />
+        You lived 3153600000 seconds.<br />
+      </li>
+      <li>
+        Create a human readable time format using the Date time object<br />
+
+        YYYY-MM-DD HH:mm<br />
+        DD-MM-YYYY HH:mm<br />
+        DD/MM/YYYY HH:mm
+      </li>
+    </ol>
   </body>
 </html>
